--- a/style.css
+++ b/style.css
@@ -22,6 +22,111 @@ a:hover {
  p {
      font-style: normal;
 }
+.tt1{
+    color: rgb(0, 140, 255);
+}
+
+.close {
+    color: var(--blue-medium);
+    float: right;
+    font-size: 1.5rem;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.submit-btn {
+    background-color: white;
+    color: rgb(0, 140, 255);
+    padding: 10px 15px;
+    font-size: 1rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 100%;
+}
+
+.modal-content{
+    align-items: center;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    color: rgb(0, 140, 255);
+    pointer-events: auto;
+    background-color: #000000d5;
+    background-clip: padding-box;
+    border: 1px solid rgba(0, 0, 0, 0.175);
+    border-radius: 0.5rem;
+    outline: 0;
+    margin: auto;
+    padding: 20px;
+    max-width: 80%;
+    max-height: 80%;
+    height: auto;
+    overflow-y: auto;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+
+/* */
+@media only screen and (max-width: 991px) {
+    .tt1 {
+        text-align: center;
+        color: rgb(0, 140, 255);
+    }
+
+    .close {
+        color: var(--blue-medium);
+        float: right;
+        font-size: 1.5rem;
+        font-weight: bold;
+        cursor: pointer;
+    }
+    .contact-form-group{
+        text-align: center;
+    }
+    .submit-btn {
+        background-color: white;
+        color: rgb(0, 140, 255);
+        padding: 10px 15px;
+        font-size: 1rem;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        width: 90%;
+    }
+
+    /* Ajustar el modal para que esté centrado */
+    .modal-content {
+        display: none; /* Oculto por defecto */
+        align-items: center;
+        position: fixed; /* Fijado para que sea siempre visible */
+        flex-direction: column;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%); /* Centrado horizontal y vertical */
+        width: 90%; /* Ajuste de ancho */
+        max-width: 400px; /* Ancho máximo */
+        color: rgb(0, 140, 255);
+        pointer-events: auto;
+        background-color: #000000d5;
+        background-clip: padding-box;
+        border: 1px solid rgba(0, 0, 0, 0.175);
+        border-radius: 0.5rem;
+        outline: 0;
+        margin: auto;
+        padding: 20px;
+        overflow-y: auto;
+        z-index: 1000;
+    }
+    
+}
+
+
+
+/* */
+
  h1, h2, h3, h4, h5, h6, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a{
     font-family: Roboto,sans-serif;
     font-style: normal;
